# kranewl

./: .ccls  .gitignore  CMakeLists.txt  LICENSE  Makefile  config.mk  globber.sh  meson.build
etc/share/kranewl/: kranewl.conf
etc/systemd/user/: kranewl-session.target  swaybg.service  swayidle.service
include/: trace.hh  version.hh
include/kranewl/: bindings.hh  client.hh  common.hh  context.hh  cycle.hh  cycle.t.hh  decoration.hh  env.hh  exec.hh  geometry.hh  layer.hh  layers.hh  layout.hh  manager.hh  model.hh  placement.hh  rules.hh  scene-layer.hh  search.hh  server.hh  util.hh  workspace.hh  xdg-decoration.hh  xwayland.hh
include/kranewl/conf/: config.hh  options.hh
include/kranewl/input/: bindings.hh  cursor-bindings.hh  cursor.hh  key-bindings.hh  keybindings.hh  keyboard.hh  mouse.hh  seat.hh
include/kranewl/tree/: client.hh  container.hh  layer-popup.hh  layer-surface.hh  layer.hh  node.hh  output.hh  popup.hh  root.hh  subsurface.hh  surface.hh  view.hh  xdg-view.hh  xdg_view.hh  xwayland-unmanaged.hh  xwayland-view.hh  xwayland_view.hh
include/protocols/: .gitignore
protocols/: meson.build
src/: main.cc
src/kranec/: main.cc
src/kranewl/: client.cc  env.cc  exec.cc  geometry.cc  layout.cc  main.cc  manager.cc  model.cc  rules.cc  server.cc  trace.cc  util.cc  workspace.cc  xdg-decoration.cc  xwayland.cc
src/kranewl/conf/: config.cc  options.cc  parse.cc  state.cc
src/kranewl/input/: binding.cc  cursor.cc  keyboard.cc  mouse.cc  pointer.cc  seat.cc
src/kranewl/tree/: client.cc  container.cc  layer-surface.cc  layer.cc  node.cc  output.cc  popup.cc  root.cc  subsurface.cc  view.cc  workspace.cc  xdg-view.cc  xdg_view.cc  xwayland-unmanaged.cc  xwayland-view.cc  xwayland_view.cc
src/server/: server.cc
subprojects/: mesa.wrap  pixman.wrap  wayland-protocols.wrap  wayland.wrap  wlroots.wrap
